[package]
name = "crossvault"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
enum-derived = "0.9.2"
env_logger = "0.11.8"
home = "0.5.12"
image = "0.25.8"
log = "0.4.28"
ocrs = "0.11.0"
rand = "0.9.2"
random_word = { version = "0.5.2", features = ["en"] }
rten = "0.22.0"
ureq = "3.1.4"
url = "2.5.7"
